<resources>
    <string name="app_name">FightStigma</string>
    <string name="fight_stigma">Fight Stigma</string>
    <string name="signin">Welcome back, sign in to your account!</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_yet">Not yet registered, create an account</string>
    <string name="reset">Enter your email to reset password</string>
    <string name="create">Join by creating an account with us</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account_sign_in">Have an account, sign in</string>
    <string name="reset_password">Reset Password</string>
    <string name="home">Home</string>
    <string name="users">Users</string>
    <string name="add_user">Add User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post">Post</string>
    <string name="logout">Logout</string>
    <string name="date_and_time">date and time</string>
    <string name="body">Body</string>
    <string name="title">Title</string>
    <string name="comments">Comments</string>
    <string name="write_comment">Write comment</string>
    <string name="comment">Comment</string>
    <string name="add_new_user_to_the_application">Add new user to the application</string>
    <string name="select_type_of_user">Select type of user</string>
    <string name="patient">Patient</string>
    <string name="counselor">Counselor</string>
    <string name="post_new_information">Post new information</string>
    <string name="upload_image">Upload Image</string>
    <string name="appointments">Appointments</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="make_an_appointment_here">Make an appointment here</string>
    <string name="select_doctor">Select Counselor</string>
    <string name="time">Time</string>
    <string name="appointment_type">Appointment Type</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
    <string name="doctor">Counselor</string>
    <string name="type">Type</string>
    <string name="approve">Approve</string>
    <string name="Doctor">Doctor</string>
    <string name="userid">userID</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="read_more">Read More</string>
    <string name="_0">0</string>
    <string name="update_post">Update Post</string>
    <string name="make_an_appointment">Make an appointment</string>
    <string name="location">Location</string>
    <string name="phone">Phone</string>
    <string name="approved">APPROVED</string>
    <string name="hi_admin">Hi, admin</string>
    <string name="welcome_patient">Welcome Patient</string>
    <string name="welcome_counselor">Welcome Counselor</string>
</resources>