<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_margin="3dp"
    android:background="@color/bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:fontFamily="@font/roboto"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/counselor"
            android:fontFamily="@font/roboto"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/counselor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/counselor"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:fontFamily="@font/roboto"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:fontFamily="@font/roboto"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:fontFamily="@font/roboto"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:fontFamily="@font/roboto"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:fontFamily="@font/roboto"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_weight="1"/>

    </LinearLayout>

    <Button
        android:id="@+id/approve"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/approve"
        android:textColor="@color/green"
        android:layout_marginTop="8dp"
        android:textSize="14sp"/>

</LinearLayout>
