<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="3dp">

    <RelativeLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/postImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/common_google_signin_btn_icon_light_normal"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/postImage"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/date_and_time"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/title"
                android:textSize="14sp"
                android:textColor="#666666"
                android:layout_marginBottom="4dp"/>

            <Button
                android:id="@+id/more"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/read_more"
                android:textColor="@color/green"
                android:textSize="14sp"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
